# ruoyi-selenium-ui-autotest

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
bases/: base_page.py
commons/: excel_utils.py
poms/: login_page.py  user_list.py
testcases/: __init__.py  select_user.xlsx  test_01.py  test_ruoyi.py
